--- a/src/Containers/Standings.css
+++ b/src/Containers/Standings.css
@@ -1,3 +1,17 @@
 .confrenceStandingsContainer {
   display: grid;
 }
+
+.toggleButtonContainer {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: #3f51b5;
+}
+
+.toggleButtonFont {
+  color: white;
+}
+
+.SelectMe {
+  background-color: #3f51b5;
+}
